--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,8 @@ dependencies {
 
     // support for java 8
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
+
+    // navigation
+    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+
 }
