Successfully setup syncing with aws cloud

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,9 +63,10 @@ dependencies {
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
 
     // aws
-    implementation "com.amplifyframework:aws-datastore:2.0.0"
+    implementation "com.amplifyframework:aws-datastore:2.1.0"
+    implementation "com.amplifyframework:aws-api:2.1.0"
     // amplify coroutine support (see: https://docs.amplify.aws/lib/project-setup/coroutines/q/platform/android/#usage )
-    implementation "com.amplifyframework:core-kotlin:2.0.0"
+    implementation "com.amplifyframework:core-kotlin:2.1.0"
 
     // support for java 8
     coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:1.1.5"
